--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,6 @@
 *.js linguist-detectable=false
 *.css linguist-detectable=false
 *.csv linguist-detectable=false
-*.QML linguist-detectable=false
+
+# Ignoriere QML-Dateien in der Sprachstatistik
+*.qml linguist-vendored
